# rule-engine

./: .gitignore  README.md  pyproject.toml
api/: main.py  schemas.py
engine/: __init__.py  context.py  engine.py  evaluator.py  exceptions.py  loader.py  models.py  operators.py
rules/documents/: templates.json
rules/products/: auto_loan.json  mortgage.json
rules/schema/: condition.schema.json  rule.schema.json  rules_file.schema.json  templates_file.schema.json
scripts/: validate_rules.py
tests/: conftest.py  test_api.py  test_engine.py  test_evaluator.py  test_loader.py  test_operators.py
