[project]
name = "doc-rule-engine"
version = "0.1.0"
description = "Configurable rule engine that resolves which legal document templates apply to a client/product/account, driven entirely by JSON rule files"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "api*"]
